--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,6 +9,12 @@ services:
     ports:
       - "27017:27017"
 
+  mskbasketdb:
+    container_name: mskredisdb
+    restart: always
+    ports:
+      - "6379:6379"
+
   msk.catalog.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
@@ -20,3 +26,16 @@ services:
       - ${HOME}/.aspnet/https:/root/.aspnet/https
     ports:
       - "8000:80"
+
+  msk.basket.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings:Redis=mskbasketdb:6379"
+    depends_on:
+      - mskcatalogdb
+    volumes:
+      - ${HOME}/.microsoft/usersecrets/:/root/.microsoft/usersecrets
+      - ${HOME}/.aspnet/https:/root/.aspnet/https
+    ports:
+      - "8001:80"
+
