--- a/src/Basket/Msk.Basket.Api/appsettings.json
+++ b/src/Basket/Msk.Basket.Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings" : {
+  "ConnectionStrings": {
     "Redis": "localhost:6379"
   },
   "Logging": {
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EventBus": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest"
+  }
+
 }
