--- a/src/Ordering/Msk.Ordering.Api/appsettings.json
+++ b/src/Ordering/Msk.Ordering.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Redis": "localhost:6379"
+    "OrderConnection": "Server=localhost;Database=OrderDb;User Id=sa;Password=Pa$$w0rd;"
   },
   "Logging": {
     "LogLevel": {
